--- a/LazyCampus/app/src/main/res/layout/activity_login.xml
+++ b/LazyCampus/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/login_register"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -48,8 +49,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="忘记密码"/>
+                android:gravity="right"
+                android:text="忘记密码?"/>
         </LinearLayout>
     </LinearLayout>
 
