--- a/LazyCampus/app/src/main/res/layout/activity_register.xml
+++ b/LazyCampus/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="10dp"
                     android:text="用户注册"
                     android:gravity="center_horizontal"
                     android:textSize="40dp"/>
@@ -44,6 +44,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="输入手机号"/>
+                <EditText
+                    android:id="@+id/regi_email"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="邮箱"/>
                 <EditText
                     android:id="@+id/regi_school"
                     android:layout_marginTop="10dp"
