--- a/LazyCampus/app/src/main/res/layout/fragment_publish.xml
+++ b/LazyCampus/app/src/main/res/layout/fragment_publish.xml
@@ -6,13 +6,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="196dp"
-        android:text="发布页面"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/button_public"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:background="@drawable/btn_bottom_confirm_bg"
+            android:layout_marginBottom="10dp"
+            android:layout_centerInParent="true"
+            android:text="发布任务"
+            android:textSize="26dp">
+        </Button>
+
+        <Button
+            android:id="@+id/button_earn"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:background="@drawable/btn_bottom_confirm_bg"
+            android:layout_marginBottom="10dp"
+            android:layout_centerInParent="true"
+            android:text="赚取赏金"
+            android:textSize="26dp"
+            android:layout_below="@id/button_public" >
+        </Button>
+
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
