--- a/LazyCampus/app/src/main/res/layout/fragment_find.xml
+++ b/LazyCampus/app/src/main/res/layout/fragment_find.xml
@@ -31,7 +31,7 @@
                 android:background="@drawable/bg_shape"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name"
+                android:hint="名字"
                 android:textAlignment="center"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_editor_absoluteX="0dp" />
