--- a/LazyCampus/app/src/main/res/layout/activity_task_detail.xml
+++ b/LazyCampus/app/src/main/res/layout/activity_task_detail.xml
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textColor="#259736"
-                    android:text="申请人数：-"/>
+                    android:text="接单：尚未接单"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
                     android:textColor="#c062ef"
-                    android:text="任务截止时间：2018/06/20 17:00"/>
+                    android:text="2018/06/20 17:00"/>
                 <TextView
                     android:id="@+id/task_detail_distance"
                     android:layout_width="0dp"
@@ -104,12 +104,24 @@
                     android:text="距离:"/>
             </LinearLayout>
         </LinearLayout>
+        <Button
+            android:id="@+id/task_detail_jiedan0"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="20dp"
+            android:background="#ff0000"
+            android:textColor="#ffffff"
+            android:text="我要接单"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:background="#000000"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/task_detail_recyclerview"
             android:layout_width="match_parent"
