--- a/LazyCampus/app/src/main/res/layout/activity_task_detail.xml
+++ b/LazyCampus/app/src/main/res/layout/activity_task_detail.xml
@@ -36,7 +36,7 @@
                     android:layout_weight="3"
                     android:textColor="#ff3636"
                     android:textSize="18dp"
-                    android:text="未申请"/>
+                    android:text="已发布"/>
             </LinearLayout>
             <TextView
                 android:id="@+id/task_detail_content"
@@ -76,7 +76,7 @@
                     android:textColor="#259736"
                     android:text="赏金：-元"/>
                 <TextView
-                    android:id="@+id/task_detail_num"
+                    android:id="@+id/task_detail_receiveid"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -104,17 +104,58 @@
                     android:text="距离:"/>
             </LinearLayout>
         </LinearLayout>
-        <Button
-            android:id="@+id/task_detail_jiedan0"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_gravity="right"
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="20dp"
-            android:background="#ff0000"
-            android:textColor="#ffffff"
-            android:text="我要接单"/>
+            android:gravity="right"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/task_state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="10dp"
+                android:text="未开始"/>
+            <Button
+                android:id="@+id/task_detail_jiedan0"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="20dp"
+                android:background="#ff0000"
+                android:textColor="#ffffff"
+                android:text="我要接单"/>
+            <Button
+                android:id="@+id/task_detail_yijiedan"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_gravity="right"
+                android:visibility="gone"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="20dp"
+                android:background="#767ed7"
+                android:textColor="#ffffff"
+                android:text="完成"/>
+            <Button
+                android:id="@+id/task_detail_yiwancheng"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_gravity="right"
+                android:visibility="gone"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="20dp"
+                android:background="#898989"
+                android:textColor="#ffffff"
+                android:text="已完成"/>
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
