--- a/LazyCampus/app/src/main/res/layout/fragment_find.xml
+++ b/LazyCampus/app/src/main/res/layout/fragment_find.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerService"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
