--- a/LazyCampus/app/src/main/res/layout/fragment_publish.xml
+++ b/LazyCampus/app/src/main/res/layout/fragment_publish.xml
@@ -23,6 +23,7 @@
         android:id="@+id/timeeditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginBottom="89dp"
         android:layout_marginStart="16dp"
         android:ems="10"
