--- a/LazyCampus/app/src/main/res/layout/item_service.xml
+++ b/LazyCampus/app/src/main/res/layout/item_service.xml
@@ -59,19 +59,14 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/credit"
+                    android:id="@+id/money00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:text="信用评级："
+                    android:text="赏金：1元"
                     android:textColor="@android:color/black" />
 
-                <TextView
-                    android:id="@+id/grade"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="A" />
             </LinearLayout>
 
 
